basic update of our team project

--- a/Librarian/css/custom.css
+++ b/Librarian/css/custom.css
@@ -685,7 +685,7 @@ a:focus {
 }
 .top_nav .navbar-right li {
     display: inline-block;
- 
+    float: right;
     position: static
 }
 @media (min-width: 480px) {
@@ -1062,7 +1062,7 @@ h2 {
     border: 1px solid #E6E9ED;
     -webkit-column-break-inside: avoid;
     -moz-column-break-inside: avoid;
-  
+    column-break-inside: avoid;
     opacity: 1;
     transition: all .2s ease
 }
@@ -1439,7 +1439,8 @@ td.details {
 .paging_full_numbers a.paginate_button,
 .paging_full_numbers a.paginate_active {
     border: 1px solid #aaa;
-
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
     padding: 2px 5px;
     margin: 0 3px;
     cursor: pointer
@@ -1528,7 +1529,7 @@ ul.msg_list li a .message {
     background: #fff;
     margin-top: 0;
     border: 1px solid #D9DEE4;
-
+    -webkit-box-shadow: none;
     right: 0;
     left: auto;
     width: 220px
@@ -1613,7 +1614,7 @@ ul.quick-list li i {
     border: 1px solid #abd9ea;
     border-radius: 5px;
     text-align: center;
- 
+    float: right;
     padding: 2px;
     margin-top: 10px
 }
@@ -2248,7 +2249,8 @@ select.parsley-error {
     box-shadow: 0 0 4px -2px #CE5454;
     position: relative;
     left: 0;
-
+    -moz-animation: .7s 1 shake linear;
+    -webkit-animation: 0.7s 1 shake linear
 }
 .item input,
 .item textarea {
@@ -2485,7 +2487,8 @@ textarea:focus {
     overflow-y: auto
 }
 span.tag {
-
+    -moz-border-radius: 2px;
+    -webkit-border-radius: 2px;
     display: block;
     float: left;
     padding: 5px 9px;
@@ -2915,7 +2918,7 @@ ul.messages li img.avatar,
 img.avatar {
     height: 32px;
     width: 32px;
-
+    float: left;
     display: inline-block;
     border-radius: 2px;
     padding: 2px;
